summer-camp page updates

--- a/public/summer-camp.html
+++ b/public/summer-camp.html
@@ -118,7 +118,8 @@
           <li id="menu-item-overview" class="menu-item sub-menu-item scroll"><a href="#overview"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Overview</a></li>
           <li id="menu-item-carousel1" class="menu-item sub-menu-item scroll"><a href="#carousel1"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Sample day</a></li>
           <li id="menu-item-dates-panel" class="menu-item sub-menu-item scroll"><a href="#dates-panel"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">dates/location</a></li>          
-          <li id="menu-item-cost" class="menu-item sub-menu-item scroll"><a href="#cost"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Cost</a></li>    <li id="menu-item-workshop" class="menu-item scroll"><a href="/workshops">Workshops</a></li>          
+          <li id="menu-item-cost" class="menu-item sub-menu-item scroll"><a href="#cost"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Cost</a></li>    
+          <li id="menu-item-workshop" class="menu-item scroll"><a href="/workshops">Workshops</a></li>          
           <li id="menu-item-about-us" class="menu-item scroll"><a href="/about_us">About us</a></li>          
           <li id="menu-item-faq-panel" class="menu-item scroll"><a href="/faq">FAQ</a></li>
         </ul><!-- #main-menu -->
@@ -131,8 +132,9 @@
         <article id="overview" class="section-wrapper clearfix" data-custom-background-img="assets/images/overview-panel/background.jpg">
           <div class="content-wrapper clearfix">
             <div class="col-sm-11 col-md-10 pull-left">
+                <h1 class="heading-center new-page-heading">Mushroom Learning</h1>
 
-                <h1 class="section-title heading-center overview-sizing">Mushroom Learning Overview</h1>
+                <h2 class="section-title heading-center">Summer Camp Overview</h1>
                 
                 <!-- grid -->
                 <section class="grid row clearfix clearfix-for-2cols">
@@ -435,102 +437,6 @@
             </div>
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
-
-        <article id="team" class="section-wrapper clearfix" data-custom-background-img="assets/images/team-panel/background.jpg">
-          <section class="page-block team" id="team">
-            <div class="container">
-              <h2 class="section-title heading-center">Mushroom Learning Team</h2>
-              <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-4 col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
-                  <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/mike.png" alt="Michael"/>
-                  <h3>Michael</h3>
-                  <p>Michael brings a passion for education and years of experience in the educational technology space beginning at <a href="http://www.revolutionprep.com" target="_blank">Revolution Prep</a> and most recently at <a href="http://www.edlio.com" target="_blank">Edlio</a>. He is excited to be a part of a great team and help make education accessible to all.</p>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4">
-                  <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/muhammad.png" alt="Muhammad"/>
-                  <h3>Muhammad</h3>
-                  <p>A former Teen Jeopardy! semi-finalist, Muhammad has been involved with technology and education in many ways. He was previously a product manager and mentor at <a href="http://www.revolutionprep.com" target="_blank">Revolution Prep</a>, a developer at <a href="http://www.fullscreen.net" target="_blank">Fullscreen</a>, and most recently helped <a href="http://www.makersquare.com" target="_blank">MakerSquare</a> design curriculum for kids.</p>
-                </div>
-<!--                 <div class="col-lg-4 col-md-4 col-sm-4">
-                  <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/lindsey.jpg" alt="Lindsey"/>
-                  <h3>Lindsey</h3>
-                  <p>Lindsey previously worked as the Alumni Relations Coordinator of a major study abroad company where she specialized in professional development--teaching students college preparedness and how to leverage their experiences into marketable skills for future careers. Lindsey will be overseeing the digital design portion of the camp</p>
-                </div> -->
-
-              </div>
-            </div>
-          </section>
-        </article>
-
-        <article id="faq-panel" class="section-wrapper clearfix" data-custom-background-img="assets/images/team-panel/background.jpg">
-          <section class="page-block faq">
-            <div class="container">
-              <h2 class="section-title heading-center">Summer Camp FAQ</h2>
-              <div class="row">
-                <div class="col-lg-3 col-md-4 col-sm-4">
-                  <img class="img-center" src="assets/images/flaticons/faq.png" alt="FAQ"/>
-                </div>
-                <div class="col-lg-8 col-md-8 col-sm-8">
-                  <div class="panel-group" id="accordion-faq">
-                    <div class="panel">
-                      <a class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse1">What are the age requirements on the summer camp?
-                        <div class="indicator"><div class="icon"><span class="hr-line"></span><span class="vr-line"></span></div></div>
-                      </a>
-                      <div id="collapse1" class="panel-collapse collapse">
-                        <div class="panel-body">
-                          Most of our students are 12 or over. We occasionally make exceptions for advanced younger students. Please email hello@mushroomlearning.com if you would would like to know more about exceptions.
-                        </div>
-                      </div>
-                    </div>
-                    <div class="panel">
-                      <a class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse2">Is there any any experience required to join?
-                        <div class="indicator"><div class="icon"><span class="hr-line"></span><span class="vr-line"></span></div></div>
-                      </a>
-                      <div id="collapse2" class="panel-collapse collapse">
-                        <div class="panel-body">
-                          This class is inteded for students with no previous coding experience. There will be around 2 hours of pre-work to be done before the first day of class.
-                        </div>
-                      </div>
-                    </div>
-                    <div class="panel">
-                      <a class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse3">What kind of snacks and lunch will be provided?
-                        <div class="indicator"><div class="icon"><span class="hr-line"></span><span class="vr-line"></span></div></div>
-                      </a>
-                      <div id="collapse3" class="panel-collapse collapse">
-                        <div class="panel-body">
-                          <p>Snacks will vary from sliced fruit to hummus and pita chips and lightly salted popcorn. Lunches will be a balanced combination of easy to eat foods.</p>
-                          <p>If you have any concerns or there are any dietary restrictions we should know about, please email hello@mushroomlearning.com.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="panel">
-                      <a class="panel-heading" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse4">Where is the camp located?
-                        <div class="indicator"><div class="icon"><span class="hr-line"></span><span class="vr-line"></span></div></div>
-                      </a>
-                      <div id="collapse4" class="panel-collapse collapse in">
-                        <div class="panel-body">
-                          <h6>West Los Angeles</h6>
-                          <p>The City School</p>
-                          <p>11625 West Pico Blvd</p>
-                          <p>Los Angeles, CA 90064</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="row contact-us">
-                <h3>Still have questions?</h3>
-                <h5>Call us between 9am - 6pm at 424-244-9794</h5>
-                <h5>Email us at <a href="mailto:hello@mushroomlearning.com">hello@mushroomlearning.com</a></h5>
-                <a class="typeform-share btn btn-primary btn-lg active typeform-button2 round-4" role="button" href="https://mushroomlearning.typeform.com/to/g6IqRe" data-mode="2" target="_blank" >Set up a time to talk</a>
-                <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
-
-              </div>
-            </div>
-          </section>
-        </article>
-
       </section><!-- #main-content -->
 
       <!-- Footer -->
