workshop page updates

--- a/public/index.html
+++ b/public/index.html
@@ -128,9 +128,9 @@
         <article id="home" class="section-wrapper clearfix" data-custom-background-img="assets/images/top-panel/background-flipped.jpg">
           <div class="content-wrapper clearfix">
             <div class="col-sm-12 col-md-12">
-              <section class="nav-bar">
-                <img src="assets/images/flaticons/badge-6.png" alt="Mushroom Learning summer camp">
-                <img src="assets/images/flaticons/badge-7.png" alt="Mushroom Learning summer camp">
+              <section class="top-nav-callout">
+                <a href="/summer_camp"><img src="assets/images/flaticons/badge-6.png" alt="Mushroom Learning summer camp"></a>
+                <a href="/workshops"><img src="assets/images/flaticons/badge-7.png" alt="Mushroom Learning summer camp"></a>
               </section>
             </div>
             <div class="col-sm-10 col-md-9 pull-right">
@@ -138,7 +138,7 @@
                   <h2 class="h1-resizing">Learn to <span class="top-panel-emphasis">code.</span></h2>
                   <h2 class="h1-resizing">Solve <span class="top-panel-emphasis">problems.</span></h2>
                   <h2 class="h1-resizing">Shape the <span class="top-panel-emphasis">future.</span></h2>
-                  <span id="camp-badge"><a href="#overview" class="link-scroll"><img src="assets/images/flaticons/badge-3.png" alt="Mushroom Learning summer camps"></a></span><p id="top-panel-subtext">Join Mushroom Learning's one-week summer camp that teaches students computational thinking, problem solving, and building a webpage from scratch using HTML, CSS, and JavaScript.</p>
+                  <p id="top-panel-subtext">Join Mushroom Learning's one-week summer camp that teaches students computational thinking, problem solving, and building a webpage from scratch using HTML, CSS, and JavaScript.</p>
                   
                 </section>
 
