--- a/public/summer-camp.html
+++ b/public/summer-camp.html
@@ -117,7 +117,7 @@
           <li id="menu-item-summer-camp" class="menu-item scroll"><a href="#">Summer Camp</a></li>
           <li id="menu-item-overview" class="menu-item sub-menu-item scroll"><a href="#overview"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Overview</a></li>
           <li id="menu-item-carousel1" class="menu-item sub-menu-item scroll"><a href="#carousel1"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Sample day</a></li>
-          <li id="menu-item-dates-panel" class="menu-item sub-menu-item scroll"><a href="#dates-panel"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">dates/location</a></li>          
+          <li id="menu-item-dates-panel" class="menu-item sub-menu-item scroll"><a href="#dates-panel"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">location/dates</a></li>          
           <li id="menu-item-cost" class="menu-item sub-menu-item scroll"><a href="#cost"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Cost</a></li>    
           <li id="menu-item-workshop" class="menu-item scroll"><a href="/workshops">Workshops</a></li>          
           <li id="menu-item-about-us" class="menu-item scroll"><a href="/about_us">About us</a></li>          
@@ -131,10 +131,16 @@
         
         <article id="overview" class="section-wrapper clearfix" data-custom-background-img="assets/images/overview-panel/background.jpg">
           <div class="content-wrapper clearfix">
+            <div class="col-sm-12 col-md-12">
+              <section class="top-nav-callout2">
+                <a href="/summer_camp"><img src="assets/images/flaticons/badge-6.png" alt="Mushroom Learning summer camp"></a>
+                <a href="/workshops"><img src="assets/images/flaticons/badge-7.png" alt="Mushroom Learning summer camp"></a>
+              </section>
+            </div>
             <div class="col-sm-11 col-md-10 pull-left">
-                <h1 class="heading-center new-page-heading">Mushroom Learning</h1>
+                <h1 class="heading-center new-page-heading h1-resizing">Mushroom Learning -- Summer Camp</h1>
 
-                <h2 class="section-title heading-center">Summer Camp Overview</h1>
+                <h2 class="section-title heading-center">Overview</h2>
                 
                 <!-- grid -->
                 <section class="grid row clearfix clearfix-for-2cols">
@@ -375,13 +381,19 @@
 
         <article id="dates-panel" class="section-wrapper clearfix" data-custom-background-img="assets/images/pricing-panel/background-flipped.jpg">         
           <div class="content-wrapper clearfix">
-            <h2 class="section-title heading-center">Los Angeles Dates and Location</h2>
+            <h2 class="section-title heading-center">Los Angeles Location and Dates</h2>
             <div class="row">
               <div class="col-lg-8 col-md-8 col-sm-8 col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
                 <div class="date-table round-1">
 <!--                   <div class="col-lg-12 col-md-12 col-sm-12">
                     <h3 class="location-button btn btn-outline-inverse btn-sm">West Los Angeles</h3>
                   </div> -->
+                  <div class="col-lg-12 col-md-12 col-sm-12 address-b">
+                    <h3>Location</h3>
+                    <p>The City School</p>
+                    <p>11625 West Pico Blvd</p>
+                    <p>Los Angeles, CA 90064</p>
+                  </div>
                   <div class="col-lg-12 col-md-12 col-sm-12 address-a">
                     <div class="col-lg-6 col-md-6 col-sm-6" style="border-right: 1px solid #fff;">
                       <h3>Week 1</h3>
@@ -391,12 +403,6 @@
                       <h3>Week 2</h3>
                       <p class="small-date">August 4 - August 8</p>
                     </div>
-                  </div>
-                  <div class="col-lg-12 col-md-12 col-sm-12 address-b">
-                    <h3>Location</h3>
-                    <p>The City School</p>
-                    <p>11625 West Pico Blvd</p>
-                    <p>Los Angeles, CA 90064</p>
                   </div>
 
                 </div>
