main page updates

--- a/public/workshops.html
+++ b/public/workshops.html
@@ -118,7 +118,7 @@
           <li id="menu-item-workshop" class="menu-item scroll"><a href="#">Workshops</a></li>          
           <li id="menu-item-overview" class="menu-item sub-menu-item scroll"><a href="#overview"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Overview</a></li>
           <li id="menu-item-dates-panel" class="menu-item sub-menu-item scroll"><a href="#dates-panel"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">location/dates</a></li>          
-          <li id="menu-item-about-us" class="menu-item scroll"><a href="/about_us">About us</a></li>          
+          <!-- <li id="menu-item-about-us" class="menu-item scroll"><a href="/about_us">About us</a></li>           -->
           <li id="menu-item-faq-panel" class="menu-item scroll"><a href="/faq">FAQ</a></li>
         </ul><!-- #main-menu -->
 
