--- a/public/summer-camp.html
+++ b/public/summer-camp.html
@@ -120,7 +120,7 @@
           <li id="menu-item-dates-panel" class="menu-item sub-menu-item scroll"><a href="#dates-panel"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">location/dates</a></li>          
           <li id="menu-item-cost" class="menu-item sub-menu-item scroll"><a href="#cost"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Cost</a></li>    
           <li id="menu-item-workshop" class="menu-item scroll"><a href="/workshops">Workshops</a></li>          
-          <li id="menu-item-about-us" class="menu-item scroll"><a href="/about_us">About us</a></li>          
+          <!-- <li id="menu-item-about-us" class="menu-item scroll"><a href="/about_us">About us</a></li>           -->
           <li id="menu-item-faq-panel" class="menu-item scroll"><a href="/faq">FAQ</a></li>
         </ul><!-- #main-menu -->
 
