changing side bar text-align

--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
           <li id="menu-item-home" class="menu-item scroll"><a href="#home">Home</a></li>
           <li id="menu-item-overview" class="menu-item sub-menu-item scroll"><a href="#why-code"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Why Code?</a></li>
           <!-- <li id="menu-item-carousel1" class="menu-item sub-menu-item scroll"><a href="#carousel1"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Testimonials</a></li> -->
-          <li id="menu-item-about-us" class="menu-item sub-menu-item scroll"><a href="#about-us"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">About Mushroom Learning</a></li>
+          <li id="menu-item-about-us" class="menu-item sub-menu-item scroll"><a href="#about-us"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">About</a></li>
           <li id="menu-item-team" class="menu-item sub-menu-item scroll"><a href="#team"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Team</a></li>
           <li id="menu-item-summer-camp" class="menu-item scroll"><a href="/summer_camp">Summer Camp</a></li>
           <li id="menu-item-workshop" class="menu-item scroll"><a href="/workshops">Workshops</a></li>          
