adding fall programs section

--- a/public/fall-programs.html
+++ b/public/fall-programs.html
@@ -1,12 +1,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="cache-control" CONTENT="no-cache">
+    <meta http-equiv="expires" CONTENT="Wed, 26 May 2014 11:12:01 GMT">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to Mushroom Learning! We teach kids to code in HTML, CSS, and JavaScript. We are hosting summer camps and ongoing classes in Los Angeles, California.">
     <meta name="author" content="Mushroom Learning">
 
-    <title>Mushroom Learning -- Summer Code Camp in Los Angeles</title>
+    <title>Mushroom Learning -- Fall Programs</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,6 +30,32 @@
 
     <!-- Javascripts
     ================================================== -->
+
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-51495105-1', 'mushroomlearning.com');
+      ga('send', 'pageview');
+    </script>
+
+    <!-- Begin Inspectlet Embed Code -->
+    <script type="text/javascript" id="inspectletjs">
+      window.__insp = window.__insp || [];
+      __insp.push(['wid', 1653948167]);
+      (function() {
+        function __ldinsp(){var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); }
+        if (window.attachEvent){
+          window.attachEvent('onload', __ldinsp);
+        }else{
+          window.addEventListener('load', __ldinsp, false);
+        }
+      })();
+    </script>
+    <!-- End Inspectlet Embed Code -->
 
     <!-- Jquery and Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
@@ -85,12 +113,12 @@
         <div id="mobile-menu-icon" class="visible-xs" onClick="toggle_main_menu();"><span class="glyphicon glyphicon-th"></span></div>
 
         <ul id="main-menu">
-          <li id="menu-item-overview" class="menu-item scroll"><a href="#overview">Overview</a></li>
-          <li id="menu-item-carousel1" class="menu-item scroll"><a href="#carousel1">Sample day</a></li>
-          <li id="menu-item-dates-panel" class="menu-item scroll"><a href="#dates-panel">dates/location</a></li>          
-          <li id="menu-item-cost" class="menu-item scroll"><a href="#cost">cost</a></li>          
-          <li id="menu-item-team" class="menu-item scroll"><a href="#team">Team</a></li>          
-          <li id="menu-item-faq-panel" class="menu-item scroll"><a href="#faq-panel">FAQ</a></li>
+          <li id="menu-item-home" class="menu-item scroll"><a href="/">Home</a></li>
+          <li id="menu-item-summer-camp" class="menu-item scroll"><a href="/summer-camp">Summer Camp</a></li>
+          <li id="menu-item-fall-programs" class="menu-item scroll"><a href="/fall-programs">Fall Programs</a></li>
+          <li id="menu-item-workshop" class="menu-item scroll"><a href="/workshops">Workshops</a></li>          
+          <!-- <li id="menu-item-about-us" class="menu-item scroll"><a href="/about-us">About us</a></li>           -->
+          <li id="menu-item-faq-panel" class="menu-item scroll"><a href="/faq">FAQ</a></li>
         </ul><!-- #main-menu -->
 
       </section><!-- #left-sidebar -->
@@ -98,37 +126,21 @@
 
       <section id="main-content" class="clearfix">
         
-        <article id="overview" class="section-wrapper clearfix" data-custom-background-img="assets/images/overview-panel/background.jpg">
+        <article id="dates-panel" class="section-wrapper clearfix" data-custom-background-img="assets/images/pricing-panel/background-flipped.jpg">         
           <div class="content-wrapper clearfix">
+            <div class="col-sm-12 col-md-12">
+              <section class="top-nav-callout2">
+                <a href="/summer-camp"><img src="assets/images/flaticons/badge-6.png" alt="Mushroom Learning summer camp"></a>
+                <a href="/workshops"><img src="assets/images/flaticons/badge-7.png" alt="Mushroom Learning summer camp"></a>
+              </section>
+            </div>
             <div class="col-sm-11 col-md-10 pull-left">
-
-                <h1 class="section-title heading-center overview-sizing">Mushroom Learning Overview</h1>
-                
-                <!-- grid -->
-                <section class="grid row clearfix clearfix-for-2cols">
-
-                  <!-- grid item -->
-                  <div class="grid-item col-md-6" style="width:100%">
-                    <div class="item-content clearfix">
-                      <img src="assets/images/flaticons/html-tag.png" class="icon" alt="Coding languages">
-                      <!-- <span class="icon glyphicon glyphicon-stats"></span> -->
-                      <div class="text-content">
-                        <h3>Web Development</h3>
-                        <h5>Full day session 9:00am - 4:30pm<sup>*</sup></h5>
-                        <p class="overview-p">Have you ever wanted to build a website from scratch? We use a combination of guided exercises, independent challenges, and unplugged activities to teach the fundamentals of HTML, CSS, and a touch of JavaScript. No coding experience required!</p>
-                        <p class="overview-p">Classes are project based and offer extensions for students of all levels.</p>
-                        <p class="asterisk"><sup>*</sup>Optional study hall from 4:30pm - 5:30pm</p>
-                      </div>
-                    </div><!-- end: .item-content -->
-                  </div><!-- end: .grid-item -->
-
-                  <!-- grid item -->
-
-                </section><!-- end: grid -->
-
-            </div><!-- .col-sm-11 -->
+              <h1 class="heading-center new-page-heading h1-resizing">Mushroom Learning -- Fall Programs</h1>
+              <div class="typeform-widget" data-url="https://mushroomlearning.typeform.com/to/RWRLsD" data-text="fall-classes" style="width:100%;height:400px;"></div>
+              <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
+
       </section><!-- #main-content -->
 
       <!-- Footer -->
