Changing video to be responsive

--- a/public/faq.html
+++ b/public/faq.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Welcome to Mushroom Learning! We teach kids to code in HTML, CSS, and JavaScript. We are hosting summer camps and ongoing classes in Los Angeles, California.">
     <meta name="author" content="Mushroom Learning">
 
-    <title>Mushroom Learning -- Summer Code Camp in Los Angeles</title>
+    <title>Mushroom Learning -- FAQ</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -114,9 +114,10 @@
 
         <ul id="main-menu">
           <li id="menu-item-home" class="menu-item scroll"><a href="/">Home</a></li>
-          <li id="menu-item-summer-camp" class="menu-item scroll"><a href="/summer_camp">Summer Camp</a></li>
+          <li id="menu-item-summer-camp" class="menu-item scroll"><a href="/summer-camp">Summer Camp</a></li>
+          <li id="menu-item-fall-programs" class="menu-item scroll"><a href="/fall-programs">Fall Programs</a></li>
           <li id="menu-item-workshop" class="menu-item scroll"><a href="/workshops">Workshops</a></li>          
-          <!-- <li id="menu-item-about-us" class="menu-item scroll"><a href="/about_us">About us</a></li>           -->
+          <!-- <li id="menu-item-about-us" class="menu-item scroll"><a href="/about-us">About us</a></li>           -->
           <li id="menu-item-faq-panel" class="menu-item scroll"><a href="/faq">FAQ</a></li>
         </ul><!-- #main-menu -->
 
@@ -129,7 +130,7 @@
             <div class="container text-right">
               <div class="col-sm-12 col-md-12">
               <section class="top-nav-callout2">
-                <a href="/summer_camp"><img src="assets/images/flaticons/badge-6.png" alt="Mushroom Learning summer camp"></a>
+                <a href="/summer-camp"><img src="assets/images/flaticons/badge-6.png" alt="Mushroom Learning summer camp"></a>
                 <a href="/workshops"><img src="assets/images/flaticons/badge-7.png" alt="Mushroom Learning summer camp"></a>
               </section>
             </div>
