--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Welcome to Mushroom Learning! We teach kids to code in HTML, CSS, and JavaScript. We are hosting summer camps and ongoing classes in Los Angeles, California.">
     <meta name="author" content="Mushroom Learning">
 
-    <title>Mushroom Learning -- Summer Code Camp in Los Angeles</title>
+    <title>Mushroom Learning -- We Teach Code!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -75,7 +75,6 @@
     });
     </script> 
     <![endif]-->  
-
     <!-- detect mobile browsers -->
     <script src="assets/js/detectmobilebrowser.js"></script>
 
@@ -118,13 +117,12 @@
           <!-- <li id="menu-item-carousel1" class="menu-item sub-menu-item scroll"><a href="#carousel1"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Testimonials</a></li> -->
           <li id="menu-item-about-us" class="menu-item sub-menu-item scroll"><a href="#about-us"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">About</a></li>
           <li id="menu-item-team" class="menu-item sub-menu-item scroll"><a href="#team"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Team</a></li>
-          <li id="menu-item-summer-camp" class="menu-item scroll"><a href="/summer_camp">Summer Camp</a></li>
+          <li id="menu-item-summer-camp" class="menu-item scroll"><a href="/summer-camp">Summer Camp</a></li>
+          <li id="menu-item-fall-programs" class="menu-item scroll"><a href="/fall-programs">Fall Programs</a></li>
           <li id="menu-item-workshop" class="menu-item scroll"><a href="/workshops">Workshops</a></li>          
-          <!-- <li id="menu-item-about-us" class="menu-item scroll"><a href="/about_us">About us</a></li>           -->
+          <!-- <li id="menu-item-about-us" class="menu-item scroll"><a href="/about-us">About us</a></li>           -->
           <li id="menu-item-faq-panel" class="menu-item scroll"><a href="/faq">FAQ</a></li>
-
         </ul><!-- #main-menu -->
-
       </section><!-- #left-sidebar -->
       <!-- end: Left Sidebar -->
 
@@ -134,7 +132,7 @@
           <div class="content-wrapper clearfix">
             <div class="col-sm-12 col-md-12">
               <section class="top-nav-callout">
-                <a href="/summer_camp"><img src="assets/images/flaticons/badge-6.png" alt="Mushroom Learning summer camp"></a>
+                <a href="/summer-camp"><img src="assets/images/flaticons/badge-6.png" alt="Mushroom Learning summer camp"></a>
                 <a href="/workshops"><img src="assets/images/flaticons/badge-7.png" alt="Mushroom Learning summer camp"></a>
               </section>
             </div>
@@ -154,10 +152,13 @@
         <article id="why-code" class="section-wrapper clearfix" data-custom-background-img="assets/images/team-panel/background.jpg">
           <section class="page-block team" id="team">
             <div class="container">
-              <h2 class="section-title heading-center home-subheaders">Why Code?</h2>
+              <h2 class="section-title heading-center home-subheaders" style="padding-right: 10%;">Why Code?</h2>
               <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
-                  <iframe width="560" height="315" src="//www.youtube.com/embed/nKIu9yen5nc?rel=0" frameborder="0" allowfullscreen id="promo-video"></iframe><br><br>
+                  <div class="videoWrapper">
+                    <iframe width="560" height="315" src="//www.youtube.com/embed/nKIu9yen5nc?rel=0" frameborder="0" allowfullscreen></iframe>
+                  </div>
+                  <br><br>
                   <p class="overview-p">Computer science develops students’ computational and critical thinking skills and shows them how to create, not simply use, new technologies. This fundamental knowledge is needed to prepare students for the 21st century, regardless of their ultimate field of study or occupation.</p>
                   <p class="overview-p">The breadth of ways in which computing knowledge prepares people for multiple careers is borne out by looking at the people working in computing occupations by sector. In fact, over 70 percent of computing occupations are outside of the information technology industry: 9 percent are in information services, 12 percent are in financial services, 36 percent are in professional and business services, 7 percent are in government and public education services, and 12 percent are in manufacturing. The College Board states studying AP Computer Science can open the pathway to 130 career areas and 48 college majors.</p>
                 </div>
