--- a/public/summer-camp.html
+++ b/public/summer-camp.html
@@ -114,13 +114,14 @@
 
         <ul id="main-menu">
           <li id="menu-item-home" class="menu-item scroll"><a href="/">Home</a></li>
-          <li id="menu-item-summer-camp" class="menu-item scroll"><a href="#">Summer Camp</a></li>
+          <li id="menu-item-summer-camp" class="menu-item scroll"><a href="#overview">Summer Camp</a></li>
           <li id="menu-item-overview" class="menu-item sub-menu-item scroll"><a href="#overview"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Overview</a></li>
           <li id="menu-item-carousel1" class="menu-item sub-menu-item scroll"><a href="#carousel1"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Sample day</a></li>
           <li id="menu-item-dates-panel" class="menu-item sub-menu-item scroll"><a href="#dates-panel"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">location/dates</a></li>          
-          <li id="menu-item-cost" class="menu-item sub-menu-item scroll"><a href="#cost"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Cost</a></li>    
+          <li id="menu-item-cost" class="menu-item sub-menu-item scroll"><a href="#cost"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Cost</a></li>
+          <li id="menu-item-fall-programs" class="menu-item scroll"><a href="/fall-programs">Fall Programs</a></li>
           <li id="menu-item-workshop" class="menu-item scroll"><a href="/workshops">Workshops</a></li>          
-          <!-- <li id="menu-item-about-us" class="menu-item scroll"><a href="/about_us">About us</a></li>           -->
+          <!-- <li id="menu-item-about-us" class="menu-item scroll"><a href="/about-us">About us</a></li>           -->
           <li id="menu-item-faq-panel" class="menu-item scroll"><a href="/faq">FAQ</a></li>
         </ul><!-- #main-menu -->
 
@@ -133,7 +134,7 @@
           <div class="content-wrapper clearfix">
             <div class="col-sm-12 col-md-12">
               <section class="top-nav-callout2">
-                <a href="/summer_camp"><img src="assets/images/flaticons/badge-6.png" alt="Mushroom Learning summer camp"></a>
+                <a href="/summer-camp"><img src="assets/images/flaticons/badge-6.png" alt="Mushroom Learning summer camp"></a>
                 <a href="/workshops"><img src="assets/images/flaticons/badge-7.png" alt="Mushroom Learning summer camp"></a>
               </section>
             </div>
