--- a/public/workshops.html
+++ b/public/workshops.html
@@ -201,6 +201,19 @@
                 <a class="typeform-share btn btn-primary btn-lg active typeform-button round-3" href="http://bit.ly/coding-workshop" target="_blank" >Registration</a>
               </span>  
             </div>
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+                  <a class="typeform-share btn btn-primary btn-lg active typeform-button2 round-4" role="button" href="https://mushroomlearning.typeform.com/to/g6IqRe" data-mode="2" target="_blank" >Set up a time to talk</a>
+                  <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+                  <h3 style="margin-top: -1em;">Or call us at 424-244-9794</h3>
+                </div>
+              </div>
+            </div>
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
