--- a/public/faq.html
+++ b/public/faq.html
@@ -142,7 +142,7 @@
                   <img class="img-center" src="assets/images/flaticons/faq.png" alt="FAQ"/>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                  <div class="panel-group" id="accordion-faq">
+                  <div class="panel-group text-left" id="accordion-faq">
                     <div class="panel">
                       <a class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse1">What are the age requirements on the summer camp?
                         <div class="indicator"><div class="icon"><span class="hr-line"></span><span class="vr-line"></span></div></div>
