changing meta description

--- a/public/faq.html
+++ b/public/faq.html
@@ -5,10 +5,10 @@
     <meta http-equiv="expires" CONTENT="Wed, 26 May 2014 11:12:01 GMT">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome to Mushroom Learning! We teach kids to code in HTML, CSS, and JavaScript. We are hosting summer camps and ongoing classes in Los Angeles, California.">
+    <meta name="description" content="Frequently asked questions about Mushroom Learning's web development program.">
     <meta name="author" content="Mushroom Learning">
 
-    <title>Mushroom Learning -- FAQ</title>
+    <title>FAQ -- Mushroom Learning</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
