--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,8 @@
         <article id="why-code" class="section-wrapper clearfix" data-custom-background-img="assets/images/team-panel/background.jpg">
           <section class="page-block team" id="team">
             <div class="container">
-              <h2 class="section-title heading-center home-subheaders" style="padding-right: 10%;">Why Code?</h2>
+              <h1 class="heading-center new-page-heading h1-resizing">Mushroom Learning</h1>
+              <h2 class="section-title heading-center home-subheaders">Why Code?</h2>
               <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                   <div class="videoWrapper">
