updating alt tags

--- a/public/faq.html
+++ b/public/faq.html
@@ -139,7 +139,7 @@
             </div>
               <div class="row">
                 <div class="col-lg-3 col-md-4 col-sm-4">
-                  <img class="img-center" src="assets/images/flaticons/faq.png" alt="FAQ"/>
+                  <img class="img-center" src="assets/images/flaticons/faq.png" alt="Mushroom Learning FAQ"/>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-8">
                   <div class="panel-group text-left" id="accordion-faq">
