--- a/public/index.html
+++ b/public/index.html
@@ -206,21 +206,15 @@
               <h2 class="section-title heading-center home-subheaders">Mushroom Learning Founders</h2>
               <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
-                  <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/mike.png" alt="Michael"/>
+                  <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/mike.png" alt="Mushroom Learning Michael"/>
                   <h3>Michael</h3>
                   <p>Michael brings a passion for education and years of experience in the educational technology space beginning at <a href="http://www.revolutionprep.com" target="_blank">Revolution Prep</a> and most recently at <a href="http://www.edlio.com" target="_blank">Edlio</a>. He is excited to be a part of a great team and help make education accessible to all.</p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4">
-                  <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/muhammad.png" alt="Muhammad"/>
+                  <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/muhammad.png" alt="Mushroom Learning Muhammad"/>
                   <h3>Muhammad</h3>
                   <p>A former Teen Jeopardy! semi-finalist, Muhammad has been involved with technology and education in many ways. He was previously a product manager and mentor at <a href="http://www.revolutionprep.com" target="_blank">Revolution Prep</a>, a developer at <a href="http://www.fullscreen.net" target="_blank">Fullscreen</a>, and most recently helped <a href="http://www.makersquare.com" target="_blank">MakerSquare</a> design curriculum for kids.</p>
                 </div>
-<!--                 <div class="col-lg-4 col-md-4 col-sm-4">
-                  <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/lindsey.jpg" alt="Lindsey"/>
-                  <h3>Lindsey</h3>
-                  <p>Lindsey previously worked as the Alumni Relations Coordinator of a major study abroad company where she specialized in professional development--teaching students college preparedness and how to leverage their experiences into marketable skills for future careers. Lindsey will be overseeing the digital design portion of the camp</p>
-                </div> -->
-
               </div>
             </div>
           </section>
